--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -169,15 +169,16 @@
       <%= f.check_box :email_replies %>
     </div>
 
-    <div class="boxline">
-      <%= f.label :pushover_replies, "Receive Pushover Alert:",
-        :class => "required" %>
-      <%= f.check_box :pushover_replies %>
-      <span class="hint">
-        Requires Pushover subscription above
-      </span>
-    </div>
-
+      <% if Pushover.enabled? %>
+        <div class="boxline">
+          <%= f.label :pushover_replies, "Receive Pushover Alert:",
+            :class => "required" %>
+          <%= f.check_box :pushover_replies %>
+          <span class="hint">
+            Requires Pushover subscription above
+          </span>
+        </div>
+      <% end %>
     <br>
 
     <div class="legend">
@@ -189,14 +190,16 @@
       <%= f.check_box :email_mentions %>
     </div>
 
-    <div class="boxline">
-      <%= f.label :pushover_mentions, "Receive Pushover Alert:",
-        :class => "required" %>
-      <%= f.check_box :pushover_mentions %>
-      <span class="hint">
-        Requires Pushover subscription above
-      </span>
-    </div>
+    <% if Pushover.enabled? %>
+      <div class="boxline">
+        <%= f.label :pushover_mentions, "Receive Pushover Alert:",
+          :class => "required" %>
+        <%= f.check_box :pushover_mentions %>
+        <span class="hint">
+          Requires Pushover subscription above
+        </span>
+      </div>
+    <% end %>
 
     <br>
 
@@ -209,14 +212,16 @@
       <%= f.check_box :email_messages %>
     </div>
 
-    <div class="boxline">
-      <%= f.label :pushover_messages, "Receive Pushover Alert:",
-        :class => "required" %>
-      <%= f.check_box :pushover_messages %>
-      <span class="hint">
-        Requires Pushover subscription above
-      </span>
-    </div>
+    <% if Pushover.enabled? %>
+      <div class="boxline">
+        <%= f.label :pushover_messages, "Receive Pushover Alert:",
+          :class => "required" %>
+        <%= f.check_box :pushover_messages %>
+        <span class="hint">
+          Requires Pushover subscription above
+        </span>
+      </div>
+    <% end %>
 
     <br>
 
@@ -233,36 +238,39 @@
 
     <br>
 
-    <div class="legend">
-      Mailing List Settings
-    </div>
+    <% if false %>
+      <%# comment %>
+      <div class="legend">
+        Mailing List Settings
+      </div>
 
-    <p>
-    When enabled, you will receive all newly submitted stories and comments to
-    your e-mail address entered above, except the stories and comments filtered
-    by your <a href="/filters">tag filters</a>.
-    All e-mail messages will appear to be sent to your private list address
-    shown below which you can filter on, and e-mails you send to that address
-    will be posted under your account on this website.  You should keep your
-    unique list address private to prevent others from posting comments as you.
-    </p>
+      <p>
+      When enabled, you will receive all newly submitted stories and comments to
+      your e-mail address entered above, except the stories and comments filtered
+      by your <a href="/filters">tag filters</a>.
+      All e-mail messages will appear to be sent to your private list address
+      shown below which you can filter on, and e-mails you send to that address
+      will be posted under your account on this website.  You should keep your
+      unique list address private to prevent others from posting comments as you.
+      </p>
 
-    <div class="boxline">
-      <%= f.label :mailing_list_mode, "Receive List E-mails:",
-        :class => "required" %>
-      <%= f.select :mailing_list_mode, [ [ "No e-mails", 0 ],
-        [ "All stories and comments", 1 ], [ "Only stories", 2 ] ] %>
-    </div>
+      <div class="boxline">
+        <%= f.label :mailing_list_mode, "Receive List E-mails:",
+          :class => "required" %>
+        <%= f.select :mailing_list_mode, [ [ "No e-mails", 0 ],
+          [ "All stories and comments", 1 ], [ "Only stories", 2 ] ] %>
+      </div>
 
-    <div class="boxline">
-      <label class="required">List Address:</label>
-      <span>
-      <tt><%= Rails.application.shortname %>-<%=
-        @edit_user.mailing_list_token %>@<%= Rails.application.domain %></tt>
-      </span>
-    </div>
+      <div class="boxline">
+        <label class="required">List Address:</label>
+        <span>
+        <tt><%= Rails.application.shortname %>-<%=
+          @edit_user.mailing_list_token %>@<%= Rails.application.domain %></tt>
+        </span>
+      </div>
 
-    <br>
+      <br>
+    <% end %>
 
     <div class="legend">
       Miscellaneous Settings
