--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,8 @@
           <% if !@user && Rails.application.open_signups? %>
             <a href="/invitations/open">Join <%= Rails.application.name %></a>
           <% end %>
-          <a href="/moderations">Moderation Log</a>
+          <!-- <a href="/moderations">Moderation Log</a> -->
+          <a href="https://gatheringsummit.com">Gathering Summit</a>
           <% if @user && @user.can_see_invitation_requests? &&
           (iqc = InvitationRequest.verified_count) > 0 %>
             <a href="/invitations">Invitation Queue (<%= iqc %>)</a>
@@ -105,9 +106,10 @@
           <% else %>
             <a href="/hats">Hats</a>
           <% end %>
-          <a href="/chat">Chat</a>
-          <a href="/privacy">Privacy</a>
-          <a href="/about">About</a>
+          <!-- <a href="/chat">Chat</a> -->
+          <!-- <a href="/privacy">Privacy</a> -->
+          <!-- <a href="/about">About</a> -->
+          <a href="https://gatheringlab.com/">About</a>
         <% end %>
       </div>
       <div class="clear"></div>
